Build updated UI

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url('https://images.stockcake.com/public/b/8/e/b8efcf30-7b33-41dd-86d0-7de568bae604_large/late-night-coding-stockcake.jpg') no-repeat center center;
+  background: url('https://static.vecteezy.com/system/resources/thumbnails/037/092/203/small_2x/the-earth-in-outer-space-black-background-with-glowing-stars-motion-spinning-slowly-planet-photo.jpg') no-repeat center center;
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* for desktop */
