--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url('https://static.vecteezy.com/system/resources/thumbnails/037/092/203/small_2x/the-earth-in-outer-space-black-background-with-glowing-stars-motion-spinning-slowly-planet-photo.jpg') no-repeat center center;
+  background: url('https://www.india.gov.in/sites/upload_files/npi/files/my-government.jpg') no-repeat center center;
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* for desktop */
