--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: url('https://www.india.gov.in/sites/upload_files/npi/files/my-government.jpg') no-repeat center center;
+  background: url('https://static.vecteezy.com/system/resources/previews/024/922/894/large_2x/realistic-of-the-waving-india-flag-with-interisting-texture-waving-of-national-india-flag-india-flag-background-design-for-independence-day-and-other-celebration-flag-of-indian-by-ai-generated-free-photo.jpg') no-repeat center center;
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* for desktop */
